mule-user-guide/v/3.7/custom-metadata-tab.adoc
= Custom Metadata Tab
:keywords: anypoint, studio, metadata, meta data, data format, data structure, dataweave, payload contents

== Overview

New in 3.7.0, all message processors in Anypoint Studio include the custom metadata tab, which allows you to edit and define metadata types for the data that goes through a specific message processor.

The custom metadata tab replaces functionality formerly used in the DataMapper transformer, which in 3.7.0 has been deprecated and replaced by the DataWeave transformer. The DataWeave transformer does not support metadata type definitions, i.e. it does not automatically define input metadata types. You can define metadata types manually, or you can automatically generate metadata types by using link:/mule-user-guide/v/3.7/datasense[DataSense] or the custom metadata editor described in this page.

[NOTE]
====
When using the DataWeave transformer, you must use either link:/mule-user-guide/v/3.7/datasense[DataSense] or the custom metadata editor to _automatically_ define data types for DataWeave.
====

The custom metadata tab is included in all message processors except connectors, which already contribute their own metadata to DataSense. The custom metadata tab allows you to define metadata types for message processors that do not automatically contribute their own types.

The image below shows how to access the custom metadata tab for the link:/mule-user-guide/v/3.3/file-endpoint-reference[File endpoint].

image:/docs/download/attachments/131466114/1.png?version=1&modificationDate=1434561407263[image]

Clicking *Metadata* (outlined in the image above) takes you to the medatada editor, shown below.

image:/docs/download/attachments/131466114/2.png?version=1&modificationDate=1434561407294[image]

Clicking *Add Metadata* allows you to select between the available metadata types:

image:/docs/download/thumbnails/131466114/4.png?version=1&modificationDate=1434562901906[image]

The defined metadata types are automatically inherited by the next message processor in the flow.

You can define the following types of input and output metadata:

* FlowVars
* SessionVars
* Message Properties
* Message Payload

[NOTE]
====
If editing metadata on an inbound endpoint, only outbound metadata is available.
====

=== Adding More Metadata Types

To define more than one metadata type, click *Add metadata* in the metadata editor, one time for each metadata type you need to define. To remove a metadata type, click the *Remove* image:/docs/download/attachments/131466114/rem_icon.png?version=1&modificationDate=1435078290837[image] icon next to the right of the editor.

image:/docs/download/attachments/131466114/adding_more.png?version=2&modificationDate=1435078267636[image]

=== Defining a Metadata Type

After adding a new metadata type, you need to perform two actions:

* Give the new type a _name_
* Define the type by selecting an existing type, or creating a new type

To give the metadata type a name, type the name in the *name:* input field. To define the type, click the edit image:/docs/download/attachments/131466114/edit_icon.png?version=1&modificationDate=1434561407321[image] icon to the right of the name.

When you click the edit icon, Studio displays the *Define Type* window, shown below.

image:/docs/download/attachments/131466114/define_type_window.png?version=1&modificationDate=1434561407311[image]

If there are metadata types already defined in your project, you can click *Select existing type* to select from one of the available types. By default, the Define Type window is set to *Create new type*. When creating a new type, you can choose between four available types:

* XML
* JSON
* CSV
* JAVA

When you create a new type, you must assign an ID for it, using whatever string is useful for your project. Type the ID in the *Id* input field. After you create a new type, you will be able to associate any new metadata you create with this new type.

== Simple Example

In this example, the application's flow takes an XML file as input, and passes it to a DataWeave transformer. The DataWeave transformer automatically inherits the input fields from the File endpoint, even if no file has yet been received.

This example uses the XML file displayed below. To complete the example, copy and save this file to your hard drive, since you will need to supply it to the metadata editor.

 View the input XML

To complete the example, create a new project and place a File endpoint as the inbound endpoint in the flow. Click the *Metadata* tab (see above), then click *Add Metadata*. Studio displays the metadata editor, shown below.

image:/docs/download/attachments/131466114/3.png?version=1&modificationDate=1434561407303[image]

The field *Output: Payload* is automatically selected from the drop-down menu. Click the edit icon image:/docs/download/attachments/131466114/edit_icon.png?version=1&modificationDate=1434561407321[image] to edit the field. Studio displays the *Define Type* window, shown below.

image:/docs/download/attachments/131466114/define_type_window.png?version=1&modificationDate=1434561407311[image]

Type a meaningful *Id* for the metadata type. In this case, we'll use `in_xml`.

Click the drop-down menu that displays *Schema,* then select *Example*.

image:/docs/download/attachments/131466114/5.png?version=1&modificationDate=1434563158465[image]

Click the ellipsis (**...**) button to use the filesystem browser to navigate to, then select the example XML file (provided above).

Once you have selected the file, click *Finish*.

Now, place a Weave transformer in the flow after the File inbound endpoint. The input metadata fields for the Weave transformer are automatically defined, as shown below.

image:/docs/download/attachments/131466114/weave.input.props.png?version=2&modificationDate=1434561407332[image]

Message processors after the File endpoint inherit the defined metadata. In this example, if you add a new metadata definition to the File endpoint, the new metadata type is also inherited by the DataWeaver transformer, and any message processors that you place after it in the flow.
